k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
        - name: devops-app
          image: ${DOCKER_USER}/devops-app:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
