k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: LoadBalancer
  selector:
    app: devops
  ports:
    - port: 80
      targetPort: 8080
